<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:keepScreenOn="true"
    tools:context=".ui.main.MainFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#B5C0D1"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginLeft="32px"
            android:layout_marginTop="32px"
            android:layout_marginRight="32px"
            android:layout_marginBottom="16px"
            android:layout_weight="1"
            android:background="#EAE6DA"
            android:foregroundGravity="center"
            app:cardCornerRadius="16px"
            app:cardElevation="@dimen/cardview_default_elevation"
            app:contentPadding="@dimen/cardview_default_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16px">

                <TextView
                    android:id="@+id/selectInputPrompt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/pick_input_prompt"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/selectedFileView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/fileSelectBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="#00FFFFFF"
                    android:drawableLeft="@drawable/ic_note_add_black_24dp"
                    android:shadowColor="#FFFFFF"
                    android:text="@string/browse"
                    android:textColor="#0000FF"
                    android:textSize="24sp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginLeft="32px"
            android:layout_marginTop="16px"
            android:layout_marginRight="32px"
            android:layout_marginBottom="32px"
            android:layout_weight="1"
            android:background="#EAE6DA"
            android:foregroundGravity="center"
            app:cardCornerRadius="16px"
            app:cardElevation="@dimen/cardview_default_elevation"
            app:contentPadding="@dimen/cardview_default_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="16px">

                <TextView
                    android:id="@+id/selectOutputPrompt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pick_output_prompt"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/outputPathView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/outputBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:background="#00FFFFFF"
                    android:drawableLeft="@drawable/ic_note_add_black_24dp"
                    android:shadowColor="#FFFFFF"
                    android:text="@string/browse"
                    android:textColor="#0000FF"
                    android:textSize="24sp"
                    android:visibility="visible" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#015AD9"
        android:gravity="center"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:indeterminate="true" />

        <Button
            android:id="@+id/convertBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="#33FFFFFF"
            android:drawableLeft="@drawable/ic_arrow_forward_white_24dp"
            android:gravity="center"
            android:padding="16dp"
            android:paddingStart="64dp"
            android:paddingEnd="64dp"
            android:text="@string/convert"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textSize="24sp" />
    </LinearLayout>
</LinearLayout>
